<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Popular Movies</string>
    <string name="most_popular_">Most Popular</string>
    <string name="top_popular">Top Popular</string>
    <string name="favorite">Favorite</string>
    <string name="user_rating">User Rating</string>
    <string name="release_date">Release Date</string>
    <string name="synopsis">Synopsis</string>
    <string name="reviews">Reviews</string>
    <string name="trailers">Trailers</string>
    <string name="error_NoMoviewData">No Movies data</string>
    <string name="tilte">Tilte</string>
</resources>
